--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Brawl Stars</h1>
+    <h2>Aqui vamos ver as principais notícias do Brawl Stars</h2>
     
 </body>
 </html>
