--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="styleshee" href="style.css">
 </head>
 <body>
-    <h1>Brawl Stars</h1>
-    <h2>Aqui vamos ver as principais notícias do Brawl Stars</h2>
+    <h1>Inteligência Artificial</h1>
+    <h2>Explorando o futuro das IAs</h2>
     
 </body>
 </html>
