--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Inteligência Artificial</h1>
-    <h2>Explorando o futuro das IAs</h2>
-    
+    <p>A inteligência artificial é uma area da computação que cria sistemas capazes de realizar tarefas que normalmente exigiriam inteligência humana</p>
+    <h2>Como funcio?</h2>
+    <p>A IA funciona a partir de algoritmos, dados e aprendizado. Ela é como um "cérebro artificial" que aprende padrões a partir de informações, em vez de ser programada com regras fixas.</p>
 </body>
 </html>
