--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <h1>Inteligência Artificial</h1>
     <p>A inteligência artificial é uma area da computação que cria sistemas capazes de realizar tarefas que normalmente exigiriam inteligência humana</p>
-    <h2>Como funcio?</h2>
-    <p>A IA funciona a partir de algoritmos, dados e aprendizado. Ela é como um "cérebro artificial" que aprende padrões a partir de informações, em vez de ser programada com regras fixas.</p>
+    <h2>Como funciona?</h2>
+    <p>A IA funciona a partir de algoritmos, dados e aprendizado. Ela é como um "cérebro artificial" que aprende padrões a partir de informações, em vez de ser progra
+    mada com regras fixas.</p>
+    <p><sntrong>Este site está sendo feita com ajuda de uma Ia :D </sntrong></p>
+    
 </body>
 </html>
