--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@
     mada com regras fixas.</p>
     <p><sntrong>Este site está sendo feita com ajuda de uma Ia :D </sntrong></p>
    <img src="chatgpt">
+   <ul>
+    <h3>Algumas Ia disponiveis na internet</h3>
+    <l1>Gemini</l1>
+    <l2>Claude</l2>
+    <l3>Microsoft Copilot</l3>
+    <l4>Perplexity AI</l4>
+    <l5>Writesonic</l5>
+    <l6>Grok 3</l6>
+   </ul>
+   
 </body>
 </html>
