--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
    <img src="chatgpt">
    <ul>
     <h3>Algumas Ia disponiveis na internet</h3>
-    <l1>Gemini</l1>
-    <l2>Claude</l2>
-    <l3>Microsoft Copilot</l3>
-    <l4>Perplexity AI</l4>
-    <l5>Writesonic</l5>
-    <l6>Grok 3</l6>
+    <li>Gemini</li>
+    <li>Claude</li>
+    <li>Microsoft Copilot</li>
+    <li>Perplexity AI</li>
+    <li>Writesonic</li>
+    <li>Grok 3</li>
    </ul>
-   
+
 </body>
 </html>
