--- a/como funciona?.html
+++ b/como funciona?.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Como funciona?</h1>
+    <p> A ia utiliza algoritmos e dados para simular a inteligência humana. Algumas das principais técnicas incluem:</p>
     
 </body>
 </html>
