--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>A IA funciona a partir de algoritmos, dados e aprendizado. Ela é como um "cérebro artificial" que aprende padrões a partir de informações, em vez de ser progra
     mada com regras fixas.</p>
     <p><sntrong>Este site está sendo feita com ajuda de uma Ia :D </sntrong></p>
-   <img src="91e35e31ef4edcf7.png">
+   <img src="91e35e31ef4edcf7.png">.
    <ul>
     <h3>Algumas Ia disponiveis na internet</h3>
     <li>Gemini</li>
