--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="styleshee" href="style.css">
 </head>
 <body>
+    <header><a href="area de atuação.html"> LINK APOIO ESTUDO </a></header>
     <h1>Inteligência Artificial</h1>
     <p>A inteligência artificial é uma area da computação que cria sistemas capazes de realizar tarefas que normalmente exigiriam inteligência humana</p>
     <h2>Como funciona?</h2>
