--- a/area de atuação.html
+++ b/area de atuação.html
@@ -10,11 +10,11 @@
     <h1>Areas de atuação</h1>
     <p>A Inteligência Artificial no IFG é aplicada em diversas áreas, com foco em soluções práticas e sustentáveis. Na energia, destaca-se o uso de IA para otimizar o mercado e a gestão de usinas com fontes renováveis. No processamento de linguagem, os projetos analisam textos sensíveis e classificam documentos oficiais. Sistemas de recomendação personalizados, análise de grandes volumes de dados na nuvem e redes neurais para ensino também fazem parte das pesquisas. A IA ainda é usada na pecuária de precisão para prever preços, identificar animais e otimizar a produção. Há também o desenvolvimento de novos algoritmos de aprendizado de máquina e sistemas tutores inteligentes para educação adaptativa. Na área de negócios, a IA apoia decisões estratégicas e a gestão automatizada de recursos.
  </p>
-    <h2>Como funciona?</h2>
+    <h2>Como é feito?</h2>
     <p>A IA funciona a partir de algoritmos, dados e aprendizado. Ela é como um "cérebro artificial" que aprende padrões a partir de informações, em vez de ser progra
     mada com regras fixas.</p>
     <p><sntrong>Alguns exemplos </sntrong></p>
-   <img src="91e35e31ef4edcf7.png">.
+   <img src="IA TAREFA.jpeg">.
    <ul>
     <h3> exemplos</h3>
     <li>Inteligência Energética</li>
