--- a/Funcionamento.html
+++ b/Funcionamento.html
@@ -12,17 +12,14 @@
  </p>
     <h2>Como a Ia aprende?</h2>
     <p>A Inteligência Artificial aprende por meio de um processo que começa com a coleta de grandes quantidades de dados. Esses dados são então processados por algoritmos capazes de identificar padrões e relações. Com base nesses padrões, os algoritmos são treinados para realizar tarefas específicas, como reconhecer imagens, traduzir idiomas ou jogar jogos. Ao longo do tempo, a IA aprende com seus próprios erros e acertos, ajustando seus modelos e melhorando continuamente seu desempenho.</p>
-    <p><sntrong>Alguns exemplos </sntrong></p>
+    <p><sntrong>Exemplos de tecnologias usadas na I </sntrong></p>
    <img src="IA TAREFA.jpeg">.
    <ul>
     <h3> exemplos</h3>
-    <li>Inteligência Energética</li>
-    <li>Processamento de Linguagem Natural</li>
-    <li>Sistemas de Recomendação</li>
-    <li>Big Data e Computação em Nuvem</li>
-    <li>Aprendizado de Máquina</li>
-    <li>Pecuária de Precisão</li>
-   </ul>
+    <li>Aprendizado de máquina (Machine Learning)</li>
+    <li>Deep learning</li>
+    <li>Processamento de linguagem natural (PLN)</li>
+    </ul>
     
 </body>
 </html>
