--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="styleshee" href="style.css">
 </head>
 <body>
-    <header><a href="area de atuação.html"> link area de atuação </a></header>
+    <header>
+        <a href="area de atuação.html"> link atuação </a>
+        <a href="Funcionamento.html"> link Funcionamento </a>
     <h1>Inteligência Artificial</h1>
     <p>A inteligência artificial é uma area da computação que cria sistemas capazes de realizar tarefas que normalmente exigiriam inteligência humana</p>
     <h2>Como funciona?</h2>
