--- a/Funcionamento.html
+++ b/Funcionamento.html
@@ -13,7 +13,7 @@
     <h2>Como a Ia aprende?</h2>
     <p>A Inteligência Artificial aprende por meio de um processo que começa com a coleta de grandes quantidades de dados. Esses dados são então processados por algoritmos capazes de identificar padrões e relações. Com base nesses padrões, os algoritmos são treinados para realizar tarefas específicas, como reconhecer imagens, traduzir idiomas ou jogar jogos. Ao longo do tempo, a IA aprende com seus próprios erros e acertos, ajustando seus modelos e melhorando continuamente seu desempenho.</p>
     <p><sntrong>Exemplos de tecnologias usadas na I </sntrong></p>
-   <img src="IA FUNC.png">.
+   <img src="IA fuc.jpeg">.
    <ul>
     <h3> exemplos</h3>
     <li>Aprendizado de máquina (Machine Learning)</li>
