--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <a href="area de atuação.html"> link atuação </a>
-        
+        <a href="area de atuação.html"> link atuação </a><br>
+
 
         <a href="Funcionamento.html"> link Funcionamento </a>
     <h1>Inteligência Artificial</h1>
