--- a/area de atuação.html
+++ b/area de atuação.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="styleshee" href="area de atuação.css">
+    <link rel="stylesheet" href="area de atuação.html">
 </head>
 <body>
     <h1>Areas de atuação</h1>
