--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
- 
 </head>
 <body>
     <header>
-        <a href="area de atuação.html"> link atuação </a><br>
+        <a href="area de atuação.html">Link Atuação</a><br>
+        <a href="Funcionamento.html">Link Funcionamento</a>
+    </header>
 
-
-        <a href="Funcionamento.html"> link Funcionamento </a>
     <h1>Inteligência Artificial</h1>
-    <p>A inteligência artificial é uma area da computação que cria sistemas capazes de realizar tarefas que normalmente exigiriam inteligência humana</p>
-    <h2>Como funciona?</h2>
-    <p>A IA funciona a partir de algoritmos, dados e aprendizado. Ela é como um "cérebro artificial" que aprende padrões a partir de informações, em vez de ser progra
-    mada com regras fixas.</p>
-    <p><sntrong>Este site está sendo feita com ajuda de uma Ia :D </sntrong></p>
-   <img src="91e35e31ef4edcf7.png">.
-   <ul>
-    <h3>Algumas Ia disponiveis na internet</h3>
-    <li>Gemini</li>
-    <li>Claude</li>
-    <li>Microsoft Copilot</li>
-    <li>Perplexity AI</li>
-    <li>Writesonic</li>
-    <li>Grok 3</li>
-   </ul>
+    <p>A inteligência artificial é uma área da computação que cria sistemas capazes de realizar tarefas que normalmente exigiriam inteligência humana.</p>
 
+    <h2>Como funciona?</h2>
+    <p>A IA funciona a partir de algoritmos, dados e aprendizado. Ela é como um "cérebro artificial" que aprende padrões a partir de informações, em vez de ser programada com regras fixas.</p>
+
+    <p><strong>Este site está sendo feito com ajuda de uma IA :D</strong></p>
+
+    <img src="91e35e31ef4edcf7.png" alt="Imagem de IA">
+
+    <h3>Algumas IAs disponíveis na internet</h3>
+    <ul>
+        <li>Gemini</li>
+        <li>Claude</li>
+        <li>Microsoft Copilot</li>
+        <li>Perplexity AI</li>
+        <li>Writesonic</li>
+        <li>Grok 3</li>
+    </ul>
 </body>
 </html>
