--- a/Funcionamento.html
+++ b/Funcionamento.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="styleshee" href="Funcionamento.css">
+    <title>Funcionamento da IA</title>
+    <link rel="stylesheet" href="Funcionamento.css">
 </head>
 <body>
     <h1>Como funciona?</h1>
-    <p>A IA funciona através de algoritmos e modelos matemáticos que aprendem com dados para realizar tarefas que normalmente exigiriam inteligência humana. Essencialmente, a IA imita a capacidade humana de aprender, raciocinar e resolver problemas. Isso é feito através de processos como aprendizado de máquina, onde sistemas são treinados para reconhecer padrões em grandes conjuntos de dados e fazer previsões ou tomar decisões com base nesses padrões. </p>
- </p>
-    <h2>Como a Ia aprende?</h2>
-    <p>A Inteligência Artificial aprende por meio de um processo que começa com a coleta de grandes quantidades de dados. Esses dados são então processados por algoritmos capazes de identificar padrões e relações. Com base nesses padrões, os algoritmos são treinados para realizar tarefas específicas, como reconhecer imagens, traduzir idiomas ou jogar jogos. Ao longo do tempo, a IA aprende com seus próprios erros e acertos, ajustando seus modelos e melhorando continuamente seu desempenho.</p>
-    <p><sntrong>Exemplos de tecnologias usadas na I </sntrong></p>
-   <img src="IA fuc.jpeg">.
-   <ul>
-    <h3> exemplos</h3>
-    <li>Aprendizado de máquina (Machine Learning)</li>
-    <li>Deep learning</li>
-    <li>Processamento de linguagem natural (PLN)</li>
+    <p>
+        A IA funciona através de algoritmos e modelos matemáticos que aprendem com dados para realizar tarefas que normalmente exigiriam inteligência humana. 
+        Essencialmente, a IA imita a capacidade humana de aprender, raciocinar e resolver problemas. 
+        Isso é feito através de processos como aprendizado de máquina, onde sistemas são treinados para reconhecer padrões em grandes conjuntos de dados e fazer previsões ou tomar decisões com base nesses padrões.
+    </p>
+
+    <h2>Como a IA aprende?</h2>
+    <p>
+        A Inteligência Artificial aprende por meio de um processo que começa com a coleta de grandes quantidades de dados. 
+        Esses dados são então processados por algoritmos capazes de identificar padrões e relações. 
+        Com base nesses padrões, os algoritmos são treinados para realizar tarefas específicas, como reconhecer imagens, traduzir idiomas ou jogar jogos. 
+        Ao longo do tempo, a IA aprende com seus próprios erros e acertos, ajustando seus modelos e melhorando continuamente seu desempenho.
+    </p>
+
+    <p><strong>Exemplos de tecnologias usadas na IA:</strong></p>
+
+    <img src="IA_func.jpeg" alt="Ilustração sobre funcionamento da IA">
+
+    <h3>Exemplos:</h3>
+    <ul>
+        <li>Aprendizado de máquina (Machine Learning)</li>
+        <li>Deep Learning</li>
+        <li>Processamento de Linguagem Natural (PLN)</li>
     </ul>
-    
 </body>
 </html>
