--- a/area de atuação.html
+++ b/area de atuação.html
@@ -3,39 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Áreas de Atuação</title>
+    <title>Áreas de Atuação da Inteligência Artificial no IFG</title>
     <link rel="stylesheet" href="area de atuação.css">
 </head>
 <body>
-    <h1>Áreas de Atuação</h1>
-    <p>
-        A Inteligência Artificial no IFG é aplicada em diversas áreas, com foco em soluções práticas e sustentáveis. 
-        Na energia, destaca-se o uso de IA para otimizar o mercado e a gestão de usinas com fontes renováveis. 
-        No processamento de linguagem, os projetos analisam textos sensíveis e classificam documentos oficiais. 
-        Sistemas de recomendação personalizados, análise de grandes volumes de dados na nuvem e redes neurais para ensino também fazem parte das pesquisas. 
-        A IA ainda é usada na pecuária de precisão para prever preços, identificar animais e otimizar a produção. 
-        Há também o desenvolvimento de novos algoritmos de aprendizado de máquina e sistemas tutores inteligentes para educação adaptativa. 
-        Na área de negócios, a IA apoia decisões estratégicas e a gestão automatizada de recursos.
-    </p>
+    <header>
+        <h1>Áreas de Atuação da Inteligência Artificial</h1>
+    </header>
 
-    <h2>Como é feito?</h2>
-    <p>
-        A IA funciona a partir de algoritmos, dados e aprendizado. 
-        Ela é como um "cérebro artificial" que aprende padrões a partir de informações, em vez de ser programada com regras fixas.
-    </p>
+    <main>
+        <section id="introducao">
+            <h2>IA no IFG: Soluções Práticas e Sustentáveis</h2>
+            <p>
+                A Inteligência Artificial (IA) no IFG é aplicada em diversas áreas, com foco em soluções práticas e sustentáveis. Nossos projetos abordam desde a otimização de mercados de energia até a pecuária de precisão, sempre buscando inovação e eficiência.
+            </p>
+        </section>
 
-    <p><strong>Alguns exemplos:</strong></p>
+        <section id="aplicacoes">
+            <h2>Principais Aplicações</h2>
+            <p>A IA no IFG é utilizada em:</p>
+            <ul>
+                <li>
+                    <strong>Inteligência Energética:</strong> Otimização do mercado e gestão de usinas com fontes renováveis.
+                </li>
+                <li>
+                    <strong>Processamento de Linguagem Natural:</strong> Análise de textos sensíveis e classificação de documentos oficiais.
+                </li>
+                <li>
+                    <strong>Sistemas de Recomendação:</strong> Desenvolvimento de recomendações personalizadas para diversos fins.
+                </li>
+                <li>
+                    <strong>Big Data e Computação em Nuvem:</strong> Análise de grandes volumes de dados para extrair <em>insights</em> valiosos.
+                </li>
+                <li>
+                    <strong>Aprendizado de Máquina:</strong> Criação de novos algoritmos e sistemas tutores inteligentes para educação adaptativa.
+                </li>
+                <li>
+                    <strong>Pecuária de Precisão:</strong> Previsão de preços, identificação de animais e otimização da produção.
+                </li>
+                <li>
+                    <strong>Negócios:</strong> Apoio a decisões estratégicas e gestão automatizada de recursos.
+                </li>
+            </ul>
+        </section>
 
-    <img src="IA_TAREFA.jpeg" alt="Exemplo de uso da IA">
+        <section id="como-funciona">
+            <h2>Como a IA Funciona?</h2>
+            <p>
+                A Inteligência Artificial opera a partir de **algoritmos**, **dados** e **aprendizado**. Diferente de programas com regras fixas, a IA atua como um "cérebro artificial" que aprende padrões e toma decisões com base nas informações que processa.
+            </p>
+            <figure>
+                <img src="IA_TAREFA.jpeg" alt="Ilustração de um processo de uso da Inteligência Artificial.">
+                <figcaption>Exemplo visual do funcionamento da IA em tarefas específicas.</figcaption>
+            </figure>
+        </section>
+    </main>
 
-    <h3>Exemplos:</h3>
-    <ul>
-        <li>Inteligência Energética</li>
-        <li>Processamento de Linguagem Natural</li>
-        <li>Sistemas de Recomendação</li>
-        <li>Big Data e Computação em Nuvem</li>
-        <li>Aprendizado de Máquina</li>
-        <li>Pecuária de Precisão</li>
-    </ul>
+    <footer>
+        <p>&copy; 2025 IFG. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
